concord_macros/tests/trybuild/fail/codegen/ws_response_pagination.stderr
error: pagination is only supported for buffered responses
 --> tests/trybuild/fail/codegen/ws_response_pagination.rs:8:8
  |
8 |     WS Connect
  |        ^^^^^^^
